# module_7

./: alembic.ini  db_config.py  docker-compose.yaml  models.py  myselect.py  pyproject.toml  seed.py
alembik/: env.py
alembik/versions/: 2f2090090df4_seed.py  32e6bf459efa_init.py  5c1e4951fc44_fixed_issue.py
