[tool.poetry]
name = "module-7"
version = "0.1.0"
description = ""
authors = ["Nikukusik <nikukusika@hmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.1.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.1"
faker = "^25.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
